--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>林艺宸</title>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <title>Little Corn's Official App</title>
+    <meta name="Keywords" content="Little Corn,Little Corn's Photo ">
+    <meta name="Description" content="The app is used to show the monents of little Corn"/>
   </head>
   <body>
     <div id="app"></div>
