--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Little Corn's Official App</title>
     <meta name="Keywords" content="Little Corn,Little Corn's Photo ">
     <meta name="Description" content="The app is used to show the monents of little Corn"/>
+    <div id='wx_pic' style='display:none;'>
+      <img src='icon.jpg' title="Little Corn"/>
+    </div>
   </head>
   <body>
     <div id="app"></div>
