--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <title>Little Corn's Official App</title>
     <meta name="Keywords" content="Little Corn,Little Corn's Photo ">
     <meta name="Description" content="The app is used to show the monents of little Corn"/>
-    <div id='wx_pic' style='display:none;'>
-      <img src='icon.jpg' title="Little Corn"/>
-    </div>
   </head>
   <body>
+    <div id='wx_pic' style='display:none;'>
+      <img src='icon.jpg' width="300" height="300" title="Little Corn"/>
+      <p>The app is used to show the monents of little Corn</p>
+    </div>
     <div id="app"></div>
     <!-- built files will be auto injected --> 
   </body>
