--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="Description" content="The app is used to show the monents of little Corn"/>
   </head>
   <body>
-    <div id='wx_pic' style='display:none;'>
+    <div id='wx_pic' style='width:0px; height:0px; overflow:hidden'>
       <img src='icon.jpg' width="300" height="300" title="Little Corn"/>
       <p>The app is used to show the monents of little Corn</p>
     </div>
