--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <title>Little Corn's Official App</title>
-    <meta name="Keywords" content="Little Corn,Little Corn's Photo ">
-    <meta name="Description" content="The app is used to show the monents of little Corn"/>
+    <title>我是小玉米</title>
+    <meta name="Keywords" content="小玉米的相册">
+    <meta name="Description" content="分享小玉米生活照"/>
   </head>
   <body>
-    <div id='wx_pic' style='width:0px; height:0px; overflow:hidden'>
-      <img src='icon.jpg' width="300" height="300" title="Little Corn"/>
-      <p>The app is used to show the monents of little Corn</p>
-    </div>
     <div id="app"></div>
     <!-- built files will be auto injected --> 
   </body>
