--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <title>我是小玉米</title>
+    <title>小玉米的相册</title>
     <meta name="Keywords" content="小玉米的相册">
     <meta name="Description" content="分享小玉米生活照"/>
   </head>
